missing file added brand logo added

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,8 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") JobBoard
+          %a.brand(href="#")
+            %img{src: '/assets/logo.png', height: '40px'}
           .container.nav-collapse
             %ul.nav
               %li= link_to "Link 1", "/path1"
