--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -10,5 +10,4 @@
       .container.nav-collapse
         %ul.nav
           %li= link_to "Company", :console_companies
-          %li= link_to "Link 2", "/path2"
-          %li= link_to "Link 3", "/path3"
+          %li= link_to "Jobs", :console_jobs
