jobs resource completed

--- a/app/views/console/companies/index.html.haml
+++ b/app/views/console/companies/index.html.haml
@@ -23,4 +23,4 @@
 
 %br
 
-= link_to 'New Company', new_console_company_path
+= link_to 'New Company', new_console_company_path, :class => 'btn btn-primary'
