--- a/app/views/console/jobs/_form.html.haml
+++ b/app/views/console/jobs/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for [:console, @job] do |f|
+= form_for([:console, @job], :html => { :class => 'form-horizontal' }) do |f|
   -if @job.errors.any?
     #error_explanation
       %h2= "#{pluralize(@job.errors.count, "error")} prohibited this job from being saved:"
@@ -6,11 +6,8 @@
         - @job.errors.full_messages.each do |msg|
           %li= msg
   .field
-    = f.label :company
-    - if @job.new_record?
-      = f.select :company, Company.all.map{|company| [company.name, company.id]}
-    - else
-      = link_to @job.company.name, console_company_path(@job.company)
+    = f.label :company_id
+    = f.select :company_id, Company.all.map{|company| [company.name, company.id]}
   .field
     = f.label :title
     = f.text_field :title
@@ -33,13 +30,14 @@
     = f.label :instructions
     = f.text_area :instructions
   .field
-    = f.label :jobs_term
-    = f.text_field :jobs_term
+    = f.label :job_type
+    = f.select :job_type, [['Full Time', 'fulltime'], ['Part Time', 'parttime'], ['Telecommute', 'telecommuate'], ['Other', 'other']], :html => { :class => 'date_parts' }
   .field
     = f.label :notes
     = f.text_area :notes
-  .field
+  .field.expires
     = f.label :expires_at
-    = f.datetime_select :expires_at
+    = f.datetime_select :expires_at, start_year: Time.now.year, end_year: (Time.now + 2.years).year, minute_step: 15, hour_step: 3
   .actions
-    = f.submit 'Save'
+    %hr
+    = f.submit 'Save Job', :class => 'btn btn-primary btn-large'
