--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,6 +45,8 @@
     
       %footer
         %p &copy; Company 2012
+        %a{href: console_root_path}
+          \.
     /
       Javascripts
       \==================================================
