--- a/app/views/console/jobs/_form.html.haml
+++ b/app/views/console/jobs/_form.html.haml
@@ -30,14 +30,17 @@
     = f.label :instructions
     = f.text_area :instructions
   .field
-    = f.label :job_type
-    = f.select :job_type, [['Full Time', 'fulltime'], ['Part Time', 'parttime'], ['Telecommute', 'telecommuate'], ['Other', 'other']], :html => { :class => 'date_parts' }
+    = f.label :contract_type
+    = f.select :contract_type, [['Full Time', 'fulltime'], ['Part Time', 'parttime'], ['Telecommute', 'telecommuate'], ['Other', 'other']], :html => { :class => 'date_parts' }
   .field
     = f.label :notes
     = f.text_area :notes
   .field.expires
     = f.label :expires_at
     = f.datetime_select :expires_at, start_year: Time.now.year, end_year: (Time.now + 2.years).year, minute_step: 15, hour_step: 3
+  .field
+    = f.label :display, 'Visibility'
+    = f.select :contract_type, [['Display', true], ['Hide', false]]
   .actions
     %hr
     = f.submit 'Save Job', :class => 'btn btn-primary btn-large'
