--- a/app/views/console/jobs/show.html.haml
+++ b/app/views/console/jobs/show.html.haml
@@ -25,8 +25,8 @@
   %b Instructions:
   = @job.instructions
 %p
-  %b Jobs term:
-  = @job.jobs_term
+  %b Job Contract type:
+  = @job.contract_type
 %p
   %b Notes:
   = @job.notes
