--- a/app/views/console/jobs/show.html.haml
+++ b/app/views/console/jobs/show.html.haml
@@ -1,39 +1,41 @@
-%p#notice= notice
-
-%p
-  %b Company:
-  = link_to @job.company.name, console_company_path(@job)
-%p
-  %b Title:
-  = @job.title
-%p
-  %b Location:
-  = @job.location
-%p
-  %b Description:
-  = @job.description
-%p
-  %b Requirements:
-  = @job.requirements
-%p
-  %b Additional qualities:
-  = @job.additional_qualities
-%p
-  %b Salary:
-  = @job.salary
-%p
-  %b Instructions:
-  = @job.instructions
-%p
-  %b Job Contract type:
-  = @job.contract_type
-%p
-  %b Notes:
-  = @job.notes
-%p
-  %b Expires at:
-  = @job.expires_at
-
-= link_to 'Edit', edit_console_job_path(@job)
-\|
-= link_to 'Back', console_jobs_path
+.page-header
+  %h1 Job Details
+  %p#notice= notice
+  %h3 Company
+  %pre= link_to @job.company.name, console_company_path(@job)
+  %p
+  %h3 Title:
+  %pre= @job.title
+  %p
+  %h3 Location:
+  %pre= @job.location
+  %p
+  %h3 Description:
+  %pre= @job.description
+  %p
+  %h3 Requirements:
+  %pre= @job.requirements
+  %p
+  %h3 Additional qualities:
+  %pre= @job.additional_qualities
+  %p
+  %h3 Salary:
+  %pre= @job.salary
+  %p
+  %h3 Instructions:
+  %pre= @job.instructions
+  %p
+  %h3 Job Contract type:
+  %pre= @job.contract_type
+  %p
+  %h3 Notes:
+  %pre= @job.notes
+  %p
+  %h3 display:
+  %pre= @job.display
+  %p
+  %h3 Expires at:
+  %pre= @job.expires_at
+  = link_to 'Edit', edit_console_job_path(@job)
+  \|
+  = link_to 'Back', console_jobs_path
