html editor added other sections tweaked

--- a/app/views/console/companies/_form.html.haml
+++ b/app/views/console/companies/_form.html.haml
@@ -18,5 +18,8 @@
   .field
     = f.label :address
     = f.text_field :address
+    .field
+    = f.label :overview
+    = f.text_area :overview
   .actions
-    = f.submit 'Save Company', :class => 'btn btn-primary'
+    = f.submit 'Save Company', :class => 'btn btn-primary btn-large'
