--- a/app/views/console/companies/edit.html.haml
+++ b/app/views/console/companies/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', console_company_path(@company)
+= link_to 'Show', console_company_path(@company), :class => 'btn'
 \::
-= link_to 'Back', console_companies_path
+= link_to 'Back', console_companies_path, :class => 'btn'
