--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,8 @@
           = yield
     
       %footer
-        %p &copy; Company 2012
+        %p &copy; somewhere in net ltd
+          = Time.now.year
         %a{href: console_root_path}
           \.
     /
