--- a/app/views/console/jobs/show.html.haml
+++ b/app/views/console/jobs/show.html.haml
@@ -36,6 +36,5 @@
   %p
   %h3 Expires at:
   %pre= @job.expires_at
-  = link_to 'Edit', edit_console_job_path(@job)
-  \|
-  = link_to 'Back', console_jobs_path
+  = link_to 'Edit', edit_console_job_path(@job), :class => 'btn'
+  = link_to 'Back', console_jobs_path, :class => 'btn'
