--- a/app/views/public/jobs/show.html.haml
+++ b/app/views/public/jobs/show.html.haml
@@ -1,88 +1,1 @@
-%table.table.table-bordered
-  %tr
-    %td= link_to '<< view all', public_jobs_path
-  %tr
-    %td
-      %h1
-        %span.btn-info
-          = @job.title
-
-  - if @job.description.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Description
-        %br/
-        =@job.description
-
-  - if @job.requirements.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Requirements
-        %br/
-        =@job.requirements
-
-  - if @job.additional_qualities.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Additional qualities
-        %br/
-        =@job.additional_qualities
-
-
-  - if @job.salary.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Salary
-        %br/
-        =@job.salary
-
-  - if @job.instructions.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Instructions
-        %br/
-        =@job.instructions
-
-  - if @job.contract_type.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Contract Type
-        %br/
-        =@job.contract_type
-
-  - if @job.notes.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Notes
-        %br/
-        =@job.notes
-
-
-  - if @job.expires_at.present?
-    %tr
-      %td
-        %h3
-          %span.btn-warning
-            Expires
-        %br/
-        #{@job.expires_at.strftime('%d/%m/%Y %H:%M')}
-
-  %tr
-    %td= link_to '<< view all listing', public_jobs_path
-  %tr
-    %td= link_to "<< view all #{@job.company.name} listing", public_jobs_path
-
+= render 'jobs/details'
