--- a/app/views/public/jobs/index.html.haml
+++ b/app/views/public/jobs/index.html.haml
@@ -14,7 +14,7 @@
         %td
           = link_to job.company.name, company_jobs_path(job.company)
         %td= link_to job.title, public_job_path(job)
-        %td= job.requirements
+        %td= job.requirements.html_safe
         %td
 
           - if (Time.now + 2.days) > job.expires_at
