--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -15,23 +15,11 @@
     %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container-fluid
-          %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.brand(href="#")
-            %img{src: '/assets/logo.png', height: '40px'}
-
     .container-fluid
-
-      .row-fluid
-        .span
-          = yield
-
+      = render 'layouts/public/header'
+      = yield
       %footer
+        %hr
         %p{:style => 'text-align: center'}
           &copy; <a href="http://somewherein.net">somewhere in net ltd</a>
           = Time.now.year
