tags added job details page updated

--- a/app/assets/stylesheets/console/jobs.css.scss
+++ b/app/assets/stylesheets/console/jobs.css.scss
@@ -13,3 +13,8 @@ input[type="text"], select{
   width: 95%;
   height: 250px;
 }
+
+div.tagsinput span.tag{
+  background-color: #0074CC;
+  color: white;
+}
