--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,6 @@
  *= require_self
  *= require jquery.ui.core
  *= require jquery.ui.theme
+ *= require ../../../vendor/assets/stylesheets/jquery.tagsinput.css
  *= require_tree .
 */
