--- a/app/views/console/jobs/_form.html.haml
+++ b/app/views/console/jobs/_form.html.haml
@@ -51,7 +51,7 @@
 
   .field
     = f.label :display, 'Visibility'
-    = f.select :display, [['Display', true], ['Hide', false]]
+    = f.select :display, [['On', true], ['Off', false]]
   .field
     = f.label :tags
     = f.text_field :tags
