jobs listing on same controller. public folder deleted

--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,4 +1,8 @@
-%h1 Jobs of #{@company.name}
+- if @company.present?
+  %h1 Jobs of #{@company.name}
+- else
+  %h1 All Jobs
+
 - if @jobs.present?
   /= pagination_links(@jobs)
   %table.table.table-striped
