--- a/app/views/jobs/_details.html.haml
+++ b/app/views/jobs/_details.html.haml
@@ -1,5 +1,5 @@
 .row-fluid
-  =link_to '<< view all', public_jobs_path
+  =link_to '<< view all', jobs_path
   %table.table.table-bordered
     %tr
       %th{colspan: 2}
@@ -73,6 +73,6 @@
           #{@job.expires_at.strftime('%d/%m/%Y %H:%M')}
 
     %tr
-      %td= link_to '<< view all listing', public_jobs_path
+      %td= link_to '<< view all listing', jobs_path
       %td= link_to "<< view all #{@job.company.name} listing", company_jobs_path(@job.company)
 
