--- a/app/views/jobs/index.html.haml
+++ b/app/views/jobs/index.html.haml
@@ -1,33 +1,2 @@
 %h1 Jobs of #{@company.name}
-- if @jobs.present?
-  /= pagination_links(@jobs)
-  %table.table.table-striped
-    %tr
-      %th Company
-      %th Title
-      %th Requirements
-      %th Expires at
-      %th
-
-    - @jobs.each do |job|
-      %tr
-        %td
-          = link_to job.company.name, company_jobs_path(job.company)
-        %td= link_to job.title, company_job_path(job.company, job)
-        %td= job.requirements.html_safe
-        %td
-
-          - if (Time.now + 2.days) > job.expires_at
-            %span.btn-danger{:title => "#{job.expires_at.strftime('%d/%m/%Y %H:%M')}"}
-              = distance_of_time_in_words_to_now(job.expires_at)
-          - elsif (Time.now + 7.days) > job.expires_at
-            %span{:title => "#{job.expires_at.strftime('%d/%m/%Y %H:%M')}"}
-              = distance_of_time_in_words_to_now(job.expires_at)
-          - else
-            %span
-              #{job.expires_at.strftime('%d/%m/%Y %H:%M')}
-
-  %br
-  /= pagination_links(@jobs)
-- else
-  No Jobs found so far!
+= render 'jobs/jobslist', :jobs => @jobs
