--- a/app/views/console/companies/new.html.haml
+++ b/app/views/console/companies/new.html.haml
@@ -1,5 +1,5 @@
-%h1 Add New Company
+%section
+  .page-header
+    %h1 Add New Company
 
-= render 'form'
-
-= link_to 'Back', console_companies_path
+  = render 'form'
