--- a/app/views/console/jobs/index.html.haml
+++ b/app/views/console/jobs/index.html.haml
@@ -1,38 +1,42 @@
-%h1 Jobs
-- if @jobs.present?
-  /= pagination_links(@jobs)
-  %table.table.table-striped
-    %tr
-      %th Company
-      %th Title
-      %th Location
-      %th Salary
-      %th Job Contract term
-      %th Posted
-      %th Expires in
-      %th Actions
+%section
+  .page-header
+    %h1 Job Postings
 
-    - @jobs.each do |job|
+  - if @jobs.present?
+    /= pagination_links(@jobs)
+    %table.table.table-striped
       %tr
-        %td
-          = link_to job.company.name, console_company_path(job.company)
-        %td= job.title
-        %td= job.location
-        %td= job.salary
-        %td= job.contract_type
-        %td
-          = job.created_at.present? ? distance_of_time_in_words_to_now(job.created_at) + ' ago' : '-'
-        %td
-          = job.expires_at.present? ? distance_of_time_in_words_to_now(job.expires_at) : '-'
-        %td
-          = link_to 'Show', console_job_path(job), :class => 'btn'
-          = link_to 'Edit', edit_console_job_path(job), :class => 'btn'
-          = link_to 'Duplicate', console_duplicate_job_path(job.id), :class => 'btn btn-inverse'
-          = link_to 'Destroy', console_job_path(job), :confirm => 'Are you sure to delete this jobs?', :method => :delete, :class => 'btn btn-danger'
+        %th Company
+        %th Title
+        %th Location
+        %th Salary
+        %th Job Contract term
+        %th Posted
+        %th Expires in
+        %th Actions
 
+      - @jobs.each do |job|
+        %tr
+          %td
+            = link_to job.company.name, console_company_path(job.company)
+          %td= job.title
+          %td= job.location
+          %td= job.salary
+          %td= job.contract_type
+          %td
+            = job.created_at.present? ? distance_of_time_in_words_to_now(job.created_at) + ' ago' : '-'
+          %td
+            = job.expires_at.present? ? distance_of_time_in_words_to_now(job.expires_at) : '-'
+          %td
+            = link_to 'Show', console_job_path(job), :class => 'btn'
+            = link_to 'Edit', edit_console_job_path(job), :class => 'btn'
+            = link_to 'Duplicate', console_duplicate_job_path(job.id), :class => 'btn btn-inverse'
+            = link_to 'Destroy', console_job_path(job), :confirm => 'Are you sure to delete this jobs?', :method => :delete, :class => 'btn btn-danger'
+
+    %br
+    /= pagination_links(@jobs)
+  - else
+    .alert.alert-warning
+      No Jobs added so far!
   %br
-  /= pagination_links(@jobs)
-- else
-  No Jobs added so far!
-%br
-= link_to 'New Job', new_console_job_path, :class => 'btn btn-primary'
+  = link_to '<i class="icon-plus">&nbsp;</i>New Job'.html_safe, new_console_job_path, :class => 'btn btn-primary'
