--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -1,13 +1,18 @@
-.navbar.navbar-fixed-top
+#top-menu.navbar.navbar-fixed-top
   .navbar-inner
-    .container-fluid
+    .container
       %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
+
       %a.brand(href="#")
-        %img{src: '/assets/logo.png', height: '40px'}
-      .container.nav-collapse
+        %img{src: '/assets/logo.png', height: '30px'}
+        JOBoard
+
+      .nav-collapse
         %ul.nav
-          %li= link_to "Company", :console_companies
-          %li= link_to "Jobs", :console_jobs
+          %li#console-companies= link_to "Companies", :console_companies
+
+          %li#console-jobs= link_to "Jobs", :console_jobs
+
