--- a/app/views/console/companies/_form.html.haml
+++ b/app/views/console/companies/_form.html.haml
@@ -1,25 +1,41 @@
-= form_for [:console, @company] do |f|
+= form_for [:console, @company], :html => {class: 'form-horizontal'} do |f|
   - if @company.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@company.errors.count, "error")} prohibited this console_company from being saved:"
-      %ul
-        - @company.errors.full_messages.each do |msg|
-          %li= msg
+    .offset1
+      #error_explanation.well
+        %h2= "#{pluralize(@company.errors.count, "error")} prohibited this console_company from being saved:"
+        %ul
+          - @company.errors.full_messages.each do |msg|
+            %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :website
-    = f.text_field :website
-  .field
-    = f.label :address
-    = f.text_field :address
-    .field
-    = f.label :overview
-    = f.text_area :overview
-  .actions
-    = f.submit 'Save Company', :class => 'btn btn-primary btn-large'
+  .control-group
+    = f.label :name, :class => 'control-label'
+    .controls
+      = f.text_field :name, class: 'input-xxlarge'
+
+  .control-group
+    = f.label :email, :class => 'control-label'
+    .controls
+      .input-prepend
+        %span.add-on.muted @
+        = f.email_field :email
+
+  .control-group
+    = f.label :website, class: 'control-label'
+    .controls
+      = f.url_field :website, class: 'input-xxlarge'
+
+  .control-group
+    = f.label :address, class: 'control-label'
+    .controls
+      = f.text_area :address, class: 'input-xxlarge', rows: 4
+
+  .control-group
+    = f.label :overview, class: 'control-label'
+
+    .controls
+      = f.text_area :overview, class: 'rich-editor input-xxlarge'
+
+  .form-actions
+    %a.btn.btn-large{type: 'button', href: console_companies_path}
+      Cancel
+    = f.submit 'Save', :class => 'btn btn-primary btn-large'
