--- a/app/views/console/companies/index.html.haml
+++ b/app/views/console/companies/index.html.haml
@@ -1,24 +1,28 @@
-%h1 Companies
+%section.form
+  .page-header
+    %h1 Companies
 
-%table.table.table-striped
-  %tr
-    %th Name
-    %th Email
-    %th Website
-    %th Address
-    %th
-
-  - @companies.each do |company|
+  %table.table.table-striped
     %tr
-      %td= company.name
-      %td= company.email
-      %td= company.website
-      %td= company.address
-      %td
-        = link_to 'Show', console_company_path(company), :class => 'btn'
-        = link_to 'Edit', edit_console_company_path(company), :class => 'btn'
-        = link_to 'Destroy', console_company_path(company), :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-danger'
+      %th Name
+      %th Email
+      %th Website
+      %th Address
+      %th
 
-%br
+    - @companies.each do |company|
+      %tr
+        %td{style: 'width: 10%'}= company.name
+        %td{style: 'width: 10%'}= company.email
+        %td{style: 'width: 10%'}= company.website
+        %td{style: 'width: 30%'}= company.address
+        %td
+          .btn-group
+            = link_to '<i class="icon-share-alt">&nbsp;</i>Show'.html_safe, console_company_path(company), :class => 'btn btn-mini'
+            = link_to '<i class="icon-pencil">&nbsp;</i>Edit'.html_safe, edit_console_company_path(company), :class => 'btn btn-mini'
+            = link_to '<i class="icon-remove">&nbsp;</i>Destroy'.html_safe, console_company_path(company), :confirm => 'Are you sure?',
+                      :method => :delete, :class => 'btn btn-danger btn-mini'
 
-= link_to 'New Company', new_console_company_path, :class => 'btn btn-primary'
+
+  .form-actions
+    = link_to '<i class="icon-plus"></i>&nbsp;Add Company'.html_safe, new_console_company_path, :class => 'btn btn-primary'
