--- a/app/views/console/jobs/_form.html.haml
+++ b/app/views/console/jobs/_form.html.haml
@@ -1,61 +1,34 @@
 = form_for([:console, @job], :html => { :class => 'form-horizontal' }) do |f|
   -if @job.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@job.errors.count, "error")} prohibited this job from being saved:"
-      %ul
-        - @job.errors.full_messages.each do |msg|
-          %li= msg
-  .field
-    = f.label :company_id
-    = f.select :company_id, Company.all.map{|company| [company.name, company.id]}
+    .offset1
+      #error_explanation.well
+        %h2= "#{pluralize(@job.errors.count, "error")} prohibited this job from being saved:"
+        %ul
+          - @job.errors.full_messages.each do |msg|
+            %li= msg
+  .tabbable
+    %ul.nav.nav-tabs
+      %li.active
+        %a.active{'data-toggle' => "tab", href: '#tab-basic-info'}
+          Basic Info
+      %li
+        %a{href: '#tab-details', 'data-toggle' => "tab"} Details
+      %li
+        %a{href: '#tab-instruction', 'data-toggle' => "tab"} Instruction
+      %li
+        %a{href: '#tab-expiry', 'data-toggle' => "tab"} Expiry
 
-  .field
-    = f.label :title
-    = f.text_field :title
+    .tab-content
+      #tab-basic-info.active.tab-pane
+        = render 'basic_form', :f => f
 
-  .field
-    = f.label :location
-    = f.text_field :location
+      #tab-details.tab-pane
+        = render 'details_form', :f => f
 
-  .field
-    = f.label :description
-    = f.text_area :description, :class => 'full-width tinymce'
+      #tab-instruction.tab-pane
+        = render 'instruction_form', :f => f
 
-  .field
-    = f.label :requirements
-    = f.text_area :requirements, :class => 'full-width'
+      #tab-expiry.tab-pane
+        = render 'expiry_form', :f => f
 
-  .field
-    = f.label :additional_qualities
-    = f.text_area :additional_qualities, :class => 'full-width'
 
-  .field
-    = f.label :salary
-    = f.text_field :salary
-
-  .field
-    = f.label :instructions
-    = f.text_area :instructions, :class => 'full-width'
-
-  .field
-    = f.label :contract_type
-    = f.select :contract_type, [['Full Time', 'fulltime'], ['Part Time', 'parttime'], ['Telecommute', 'telecommuate'], ['Other', 'other']], :html => { :class => 'date_parts' }
-
-  .field
-    = f.label :notes
-    = f.text_area :notes, :class => 'full-width'
-
-  .field.expires
-    = f.label :expires_at
-    = f.datetime_select :expires_at, start_year: Time.now.year, end_year: (Time.now + 2.years).year, minute_step: 15, hour_step: 3
-
-  .field
-    = f.label :display, 'Visibility'
-    = f.select :display, [['On', true], ['Off', false]]
-  .field
-    = f.label :tags
-    = f.text_field :tags
-
-  .actions
-    %hr
-    = f.submit 'Save Job', :class => 'btn btn-primary btn-large'
