--- a/app/views/layouts/console.html.haml
+++ b/app/views/layouts/console.html.haml
@@ -15,14 +15,19 @@
     %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    = render 'layouts/console/header'
-    .container-fluid
+    .container
+      = render 'layouts/console/header'
+      = render 'layouts/notice'
       = yield
 
     %footer
       %hr
-      %p{align: 'center'}
-        &copy; somewhere in net ltd
+      %p.muted{align: 'center'}
+        %b &copy;
+        = image_tag 'http://www.somewherein.net/wp-content/themes/Gaia/data/1322638412_swilogo-184x29.gif',
+                    title: 'somewhere in net ltd'
+
         = Time.now.year
 
-    = javascript_include_tag "application"
+    = javascript_include_tag "console/console"
+    = yield :bottom
