--- a/app/views/console/jobs/_instruction_form.html.haml
+++ b/app/views/console/jobs/_instruction_form.html.haml
@@ -1,5 +1,5 @@
 .control-group
-  = f.label :instructions, class: 'control-label'
+  = f.label :instructions, 'How to Apply', class: 'control-label'
   .controls
     = f.text_area :instructions, :class => 'input-xxlarge rich-editor'
 
