--- a/app/views/console/jobs/edit.html.haml
+++ b/app/views/console/jobs/edit.html.haml
@@ -1,6 +1,5 @@
-%h1 Editing job
-= render 'form'
+%section
+  .page-header
+    %h1 Editing job
 
-= link_to 'Show', console_job_path(@job)
-\|
-= link_to 'Back', console_jobs_path
+  = render 'form'
