--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -15,14 +15,19 @@
     %link(href="images/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114")
 
   %body
-    .container-fluid
+    .container
       = render 'layouts/public/header'
+      = render 'layouts/notice'
       = yield
-      %footer
-        %hr
-        %p{:style => 'text-align: center'}
-          &copy; <a href="http://somewherein.net">somewhere in net ltd</a>
-          = Time.now.year
+
+    %footer
+      %hr
+      %p.muted{align: 'center'}
+        %b &copy;
+        = image_tag 'http://www.somewherein.net/wp-content/themes/Gaia/data/1322638412_swilogo-184x29.gif',
+                    title: 'somewhere in net ltd'
+
+        = Time.now.year
 
     = javascript_include_tag "application"
-
+    = yield :bottom
