--- a/app/views/layouts/public/_header.html.haml
+++ b/app/views/layouts/public/_header.html.haml
@@ -1,10 +1,1 @@
-.row-fluid
-  .navbar.navbar-fixed-top
-    .navbar-inner
-      .container-fluid
-        %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
-          %span.icon-bar
-          %span.icon-bar
-          %span.icon-bar
-        %a.brand(href="#")
-          %img{src: '/assets/logo.png', height: '40px'}
+= render 'layouts/public/menu'
