--- a/app/views/console/dashboard/index.html.haml
+++ b/app/views/console/dashboard/index.html.haml
@@ -1,3 +1,7 @@
 %h1 Dashboard
 %p
   Welcome to Dashboard!
+
+%p
+  %a.btn.btn-large.btn-primary{href: new_console_job_path} Add New Job
+  %a.btn.btn-large.btn-primary{href: new_console_company_path} Add New Company
