--- a/app/views/console/jobs/_expiry_form.html.haml
+++ b/app/views/console/jobs/_expiry_form.html.haml
@@ -11,4 +11,4 @@
 
 .form-actions.navbar-fixed-bottom
   %a.btn.btn-warning{href: '#tab-instruction', 'data-toggle' => 'tab', type: 'button'} &lt; Previous Expiry
-  = f.submit 'Save Job', class: 'btn btn-primary'
+  = f.submit 'Save Job', class: 'btn btn-primary btn-large'
