pages resource added in console static controller added in public

--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -13,6 +13,6 @@
       .nav-collapse
         %ul.nav
           %li#console-companies= link_to "Companies", :console_companies
-
           %li#console-jobs= link_to "Jobs", :console_jobs
+          %li#console-jobs= link_to "Pages", :console_pages
 
