--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,8 +44,8 @@
           = yield
     
       %footer
-        %p &copy; somewhere in net ltd
-          = Time.now.year
+        %p
+          = "&copy; somewhere in net ltd #{Time.now.year}"
         %a{href: console_root_path}
           \.
     /
