name fixed page title fixed

--- a/app/views/layouts/console/_menu.html.haml
+++ b/app/views/layouts/console/_menu.html.haml
@@ -8,7 +8,7 @@
 
       %a.brand(href="#")
         %img{src: '/assets/logo.png', height: '30px'}
-        JOBoard
+        somewhere in... jobs
 
       .nav-collapse
         %ul.nav
